<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bj"
    tools:context=".WordtestActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dc"
        android:textSize="45dp"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="application"
        android:textSize="20dp"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/brs"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:textSize="20dp"
        android:layout_gravity="center"
        />
</LinearLayout>